# graphmini-o

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  baseline_test.sh  compile_log.csv  comprehensive_test.sh  correctness_test.sh  debug_single_test.sh  fix_meta.sh  fixed_baseline_test.sh  fixed_test.sh  hanging.sh  memory-safetytest.sh  pruning_analysis.sh  query_to_binary.py  quick_meeting_demo.sh  run_log.csv  run_with_timeout.py  simple_framework.sh  small_dataset_test.py  smart_test_framework.py  success_test.sh  test_complex_patterns.py  test_wrapper.sh  unified_framework.sh  unified_framework_medium.sh  working_baseline_test.sh  working_performance_test.sh
baseline_study_20250624_105513/: baseline_results.csv
benchmark_results_20250807_040128/: summary.txt
benchmark_results_20250807_040708/: results.csv
benchmark_results_20250807_041019/: results.csv  summary.txt
build_debug/: debug_cmake.sh
complete_results_20250624_115539/: performance_results.csv
comprehensive_results_20250624_114028/: performance_results.csv
correctness_results_20250708_104750/: correctness_comparison.csv
dataset/: download_macos.sh  prep_macos.sh
debug_results_20250807_035350/: debug_log.txt  results.csv
debug_results_20250807_035755/: debug_log.txt  results.csv
dependency/GraphPi/: CMakeLists.txt
dependency/GraphPi/src/: CMakeLists.txt  graph.cpp  mpi_stubs.cpp
fixed_results_20250624_114227/: results.csv
macos_results_20250807_051314/: results.csv
macos_results_20250807_142339/: results.csv
pruning_analysis_20250708_112238/: pruning_results.csv
queries/: convert_query_format.py
queries/graphmini_patterns/: P2.graph  P3.graph  P5.graph  P6.graph  P7.graph  P8.graph
simple_results_20250807_131140/: results.csv
small_datasets/10v_15e_sparse/: meta.txt
small_datasets/10v_30e_dense/: meta.txt  snap.txt
src/: CMakeLists.txt  runner.cpp
test_graphs/: 3v_dense_0.graph
unified_results_20250624_120614/: unified_results.csv
unified_results_20250624_121224/: unified_results.csv
unified_results_20250624_121521/: unified_results.csv
unified_results_20250624_121957/: unified_results.csv
unified_results_20250624_122104/: unified_results.csv
unified_results_20250624_122236/: unified_results.csv
unified_results_20250624_122319/: unified_results.csv
unified_results_20250624_123123/: unified_results.csv
unified_results_corrected_20250624_123930/: unified_results.csv
unified_results_corrected_20250624_124104/: unified_results.csv
unified_results_corrected_20250624_124309/: unified_results.csv
unified_results_corrected_20250624_124521/: unified_results.csv
unified_results_corrected_20250624_124638/: unified_results.csv
unified_results_corrected_20250624_124709/: unified_results.csv
unified_results_corrected_20250624_124735/: unified_results.csv
unified_results_corrected_20250624_125229/: unified_results.csv
unified_results_corrected_20250624_125319/: unified_results.csv
unified_results_corrected_20250624_125353/: unified_results.csv
unified_results_corrected_20250708_110437/: unified_results.csv
unified_results_corrected_20250708_112138/: unified_results.csv
unified_results_corrected_20250708_112900/: unified_results.csv
unified_results_graphmini_20250709_212303/: unified_results.csv
unified_results_graphmini_20250709_232955/: unified_results.csv
unified_results_graphmini_20250710_233929/: unified_results.csv
unified_results_graphmini_20250711_001522/: unified_results.csv
unified_results_graphmini_20250713_011315/: unified_results.csv
unified_results_graphmini_20250713_134633/: unified_results.csv
unified_results_graphmini_20250713_135350/: unified_results.csv
unified_results_graphmini_20250713_164626/: unified_results.csv
unified_results_graphmini_20250713_171121/: unified_results.csv
unified_results_graphmini_20250716_000636/: unified_results.csv
unified_results_graphmini_20250716_000652/: unified_results.csv
unified_results_graphmini_20250803_184439/: unified_results.csv
unified_results_graphmini_20250803_185143/: unified_results.csv
unified_results_graphmini_20250803_185440/: unified_results.csv
unified_results_graphmini_20250803_191250/: unified_results.csv
unified_results_main_20250805_224403/: unified_results.csv
unified_results_main_20250805_225851/: unified_results.csv
unified_results_main_20250805_230054/: unified_results.csv
unified_results_main_20250805_232755/: unified_results.csv
unified_results_main_20250805_232831/: unified_results.csv
unified_results_main_20250805_232915/: unified_results.csv
unified_results_main_20250805_233236/: unified_results.csv
unified_results_main_20250805_233244/: unified_results.csv
unified_results_main_20250806_000733/: unified_results.csv
unified_results_main_20250806_021520/: unified_results.csv
unified_results_main_20250806_031533/: unified_results.csv
unified_results_main_20250806_140313/: unified_results.csv
unified_results_medium_graphmini_20250728_124742/: unified_results.csv
unified_results_openmp-conversion_20250710_233341/: unified_results.csv
unified_results_openmp-conversion_20250710_235252/: unified_results.csv
(+234 files in other folders)
